# toml-cli2

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml  deploy.yml.yaml  upload-binaries.yml
src/: main.rs
test/: test.rs
